Creating Auth module

--- a/src/js/layout/footer.html
+++ b/src/js/layout/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <a class="logo-font" ui-sref="app.home" ng-bind="::$ctrl.appName | lowercase"></a>
+    <a class="logo-font" ui-sref="app.home" ng-bind="::$ctrl.appName"></a>
     <span class="attribution">
       &copy; {{::$ctrl.date | date:'yyyy'}}.
       Maulik Fojdar
