--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -3,7 +3,7 @@
 
     <a class="navbar-brand"
       ui-sref="app.home"
-      ng-bind="::$ctrl.appName | lowercase">
+      ng-bind="::$ctrl.appName">
     </a>
 
     <!-- Show this for logged out users -->
