Login and Register functionality

--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -7,7 +7,35 @@
     </a>
 
     <!-- Show this for logged out users -->
-    <ul class="nav navbar-nav pull-xs-right">
+    <ul class="nav navbar-nav pull-xs-right" show-authed="false">
+
+      <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.home">
+          Home
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.article">
+          Article
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.profile">
+          Profile
+        </a>
+      </li>
+
+    </ul>
+    <!-- Show this for logged in users -->
+     <ul class="nav navbar-nav pull-xs-right" show-authed="true">
 
       <li class="nav-item">
         <a class="nav-link"
