--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -20,16 +20,16 @@
       <li class="nav-item">
         <a class="nav-link"
           ui-sref-active="active"
-          ui-sref="app.article">
-          Article
+          ui-sref="app.login">
+          Sign in
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link"
           ui-sref-active="active"
-          ui-sref="app.profile">
-          Profile
+          ui-sref="app.register">
+          Register
         </a>
       </li>
 
@@ -57,7 +57,7 @@
         <a class="nav-link"
           ui-sref-active="active"
           ui-sref="app.profile">
-          Profile
+          My Profile
         </a>
       </li>
 
