--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -53,10 +53,18 @@
         </a>
       </li>
 
+       <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.settings">
+          <i class="ion-gear-a"></i>&nbsp;Settings
+        </a>
+      </li> 
+
       <li class="nav-item">
         <a class="nav-link"
           ui-sref-active="active"
-          ui-sref="app.profile">
+          ui-sref="app.article">
           My Profile
         </a>
       </li>
