--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -64,8 +64,9 @@
       <li class="nav-item">
         <a class="nav-link"
           ui-sref-active="active"
-          ui-sref="app.article">
-          My Profile
+          ui-sref="app.profile({ username: $ctrl.currentUser.username })">
+          <img ng-src="{{$ctrl.currentUser.image}}" class="user-pic"/>
+          {{ $ctrl.currentUser.username }}
         </a>
       </li>
 
